--- a/hw2/etsy.css
+++ b/hw2/etsy.css
@@ -75,7 +75,7 @@ a {
 #cart {
 	font-size: 24px; 
 	font-weight: 3;
-	padding-top: 11px;
+	padding: 11px 0px 0px 7px;
 }
 
 .nav-bar {
@@ -89,9 +89,8 @@ a {
 
 hr {
 	border: none;
-	margin: 0px;
+	margin: 0px -99999px 0px -99999px;
 	border-bottom: 2px solid rgba(34, 34, 34, 0.15);
-	width: 100%;
 }
 
 li {
@@ -103,8 +102,8 @@ li {
 }
 
 h2 {
-	font-weight: 200;
-	font-size: 30.75px;
+	font-weight: 300;
+	font-size: 30px;
 	padding: 30px 12px 12px 12px;
 	margin: 0px;
 	text-align: center;
@@ -124,6 +123,7 @@ h2 {
 	width: 260px;
 	padding: 18px;
 	text-align: center;
+	font-weight: 500;
 	border-bottom-left-radius: 4px;
 	border-bottom-color: rgb(225, 227, 223);
 	border-bottom-style: solid;
@@ -140,8 +140,8 @@ h2 {
 }
 
 h3 {
-	font-size: 25px;
-	font-weight: 200;
+	font-size: 24px;
+	font-weight: 325;
 	padding: 0px 18px 0px 18px;
 	margin-top: 40%;
 	margin-bottom: 15px;
@@ -187,6 +187,7 @@ span {
 }
 
 #pic-text-2 {
+	font-weight: 500;
 	margin: 0px;
 	width: 435px;
 	height: 78px;
@@ -203,17 +204,17 @@ span {
 
 #checks {
 	display: flex;
-	justify-content: center;
 	margin-top: 30px;
 	padding: 12px 18px 12px 18px;
 	color: rgb(34, 34, 34);
 	text-align: center;
-	font-weight: 300;
+	font-weight: 325;
 }
 
 article {
 	width: 340px;
 	margin: 0px 46.65px 0px 46.672px;
+	padding-right: 18px;
 	line-height: 22px;
 }
 
@@ -221,6 +222,6 @@ h4 {
 	display: inline;
 	padding: 3px 0px 0px 12px;
 	font-size: 16px;
-	font-weight: 300;
+	font-weight: 325;
 }
 
