--- a/hw2/etsy.css
+++ b/hw2/etsy.css
@@ -90,7 +90,7 @@ a {
 
 hr {
 	border: none;
-	margin: 0px;
+	margin: 0px -100px 0px -100px;
 	border-bottom: 2px solid rgba(34, 34, 34, 0.15);
 }
 
