--- a/hw2/etsy.css
+++ b/hw2/etsy.css
@@ -90,7 +90,7 @@ a {
 
 hr {
 	border: none;
-	margin: 0px -100px 0px -100px;
+	margin: 0px auto 0px auto;
 	border-bottom: 2px solid rgba(34, 34, 34, 0.15);
 }
 
@@ -112,8 +112,8 @@ h2 {
 .pic-section {
 	display: flex;
 	justify-content: right;
-	padding: 18px 0px 0px 36px;
-	margin: 0px 0px 0px 15px;
+	padding: 18px 18px 0px 36px;
+	margin: 0px 15px 0px 15px;
 	height: 320px;
 }
 
@@ -158,7 +158,7 @@ span {
 }
 
 #girl-pic {
-	width: 584.67px;
+	width: 610px;
 	padding-right: 0px;
 	margin-right: 18px;
 	border-bottom-right-radius: 4px;
