--- a/hw2/etsy.css
+++ b/hw2/etsy.css
@@ -295,8 +295,9 @@ h4 {
 
 	body {
 		width: 100%;
-		height: 100%;
+		height: 1000;
 		margin: 0px auto;
+		overflow: scroll;
 	}
 
 	header {
@@ -342,7 +343,7 @@ h4 {
 	}
 
 	input {
-		padding-left: 6px;
+		padding-left: 12px;
 		padding-right: 0px;
 		width: 75%;
 	}
