--- a/hw2/etsy.css
+++ b/hw2/etsy.css
@@ -142,9 +142,9 @@ li {
 h2 {
 	font-family: "Guardian-EgypTT",serif;
     font-weight: 100;
-	font-size: 32px;
-	letter-spacing: 1px;
-	padding: 30px 12px 12px 12px;
+	font-size: 33px;
+	letter-spacing: 1.5px;
+	padding: 30px 14px 12px 10px;
 	margin: 0px;
 	text-align: center;
 }
@@ -275,7 +275,7 @@ h5 {
 	font-family: "Graphik Webfont";
 	display: flex;
 	margin-top: 30px;
-	padding: 12px 0px 12px 25px;
+	padding: 12px 0px 0px 25px;
 	text-align: center;
 }
 
@@ -289,7 +289,7 @@ article {
 
 h4 {
 	display: inline;
-	padding: 0px 0px 0px 12px;
+	padding: 0px 0px 0px 18px;
 	font-size: 16px;
 	font-weight: 300;
 	vertical-align: top;
@@ -307,7 +307,7 @@ h4 {
 	font-weight:300;
 	height: 24px;
 	margin: 0px -8px 0px -8px;
-	text-align: center;
+	vertical-align: bottom;
 	width:24px;
 	padding: 0px;
 }
