--- a/hw2/etsy.css
+++ b/hw2/etsy.css
@@ -381,18 +381,19 @@ h4 {
 	h2 {
 		padding: 15px 12px 18px 12px;
 		font-size: 24px;
+		letter-spacing: 0.75px;
 	}
 
 	.pic-section {
 		display: block;
 		padding: 0px 10px 0px 10px;
 		margin: 0px;
-		height: 600px;
+		height: 80%;
 	}
 
 	#pic-section-1 {
 		flex-direction: column-reverse;
-		height: 72%;
+		height: 430px;
 	}
 
 	#pic-text-1 {
@@ -412,7 +413,7 @@ h4 {
 		box-sizing: border-box;
 		border-top: none;
 		width: 100%;
-		height: 31%;
+		height: 30%;
 	}
 
 	#girl-pic-mobile {
@@ -443,6 +444,10 @@ h4 {
 		line-height: 28px;
 	}
 
+	.bowl-container {
+		height: 30%;
+	}
+
 	.bowl-pic-text {
 		position: absolute;
 		top: 0px;
@@ -465,6 +470,40 @@ h4 {
 
 	.nav-bar, li, #checks, .pic-text-2, article, h4, .check-p, check-symbol, #girl-pic {
 		display: none;
+	}
+
+}
+
+@media only screen and (max-width: 300px) {
+
+	input {
+		padding-left: 12px;
+		padding-right: 0px;
+		width: 65%;
+		font-size: 10px;
+	}
+
+	button {
+		width: 20%;
+	}
+
+	h3 {
+		font-size: 20px;
+		margin: 5px 5px 12px 5px;
+	}
+
+	h5 {
+		font-size: 12px;
+	}
+
+	.pic-text-font {
+		font-size: 11px;
+		font-weight: bold;
+	}
+
+	.arrow {
+		padding-left: 1px;
+		color: rgb(0, 0, 0);
 	}
 
 }
