--- a/hw2/etsy.css
+++ b/hw2/etsy.css
@@ -312,8 +312,8 @@ h4 {
 	padding: 0px;
 }
 
-/* mobile CSS */
-@media only screen and (max-width: 500px) {
+/* mobile CSS - regular phones*/
+@media only screen and (max-width: 470px) {
 
 	body {
 		width: 100%;
@@ -474,6 +474,170 @@ h4 {
 
 }
 
+/* mobile CSS - tablets */
+@media only screen and (min-width: 471px) and (max-width: 720px) {
+
+	body {
+		width: 100%;
+		margin: 0px auto;
+		overflow: scroll;
+	}
+
+	header {
+		flex-wrap: wrap;
+		padding: 0px 8px 0px 12px;
+		margin: 0px;
+	}
+
+	h1 {
+		padding: 2px 0px 2px 0px;
+		font-size: 33px;
+		flex-grow: 2;
+		order: 1;
+	}
+
+	#sign-in {
+		padding: 17px 15px 9px 0px;	
+		order: 2;	
+	}
+
+	#cart {
+		padding-right: 18px;
+		order: 3;
+	}
+
+	.break {
+		display: inline;
+		order: 4;
+		flex-basis: 100%;
+	}
+
+	.mobile-nav {
+		display: inline;
+		order: 5;
+		margin: 20px 10px 0px 0px;
+	}
+
+	form {
+		display: inline;
+		order: 6;
+		margin: 10px 0px 15px 0px;
+		flex-grow: 2;
+		padding: 0px;
+	}
+
+	input {
+		padding-left: 12px;
+		padding-right: 0px;
+		width: 80%;
+	}
+
+	button {
+		width: 15%;
+	}
+
+	hr {
+		margin: 0px;
+		border-bottom: 1px solid rgba(34, 34, 34, 0.15);
+	}
+
+	h2 {
+		padding: 15px 12px 18px 12px;
+		font-size: 24px;
+		letter-spacing: 0.75px;
+	}
+
+	.pic-section {
+		display: block;
+		padding: 0px 10px 0px 10px;
+		margin: 0px;
+		height: 80%;
+	}
+
+	#pic-section-1 {
+		flex-direction: column-reverse;
+		height:70%;
+	}
+
+	#pic-text-1 {
+		background-color: rgb(248, 235, 230);
+		border-bottom-left-radius: 4px;
+		border-bottom-right-radius: 4px;
+		border-bottom-color: rgb(225, 227, 223);
+		border-bottom-style: solid;
+		border-bottom-width: 1px;
+		border-left-color: rgb(225, 227, 223);
+		border-left-style: solid;
+		border-left-width: 1px;
+		border-right-color: rgb(225, 227, 223);
+		border-right-style: solid;
+		border-right-width: 1px;
+		border-top-left-radius: 0px;
+		box-sizing: border-box;
+		border-top: none;
+		width: 100%;
+		height: 30%;
+	}
+
+	#girl-pic-mobile {
+		display: inline-flex;
+		flex-grow: 2;
+		width: 100%;
+		border-top-right-radius: 4px;
+		border-top-color: rgb(225, 227, 223);
+		border-top-style: solid;
+		border-top-width: 1px;
+		border-right-color: rgb(225, 227, 223);
+		border-right-style: solid;
+		border-right-width: 1px;
+		border-left-color: rgb(225, 227, 223);
+		border-left-style: solid;
+		border-left-width: 1px;
+		border-top-left-radius: 4px;
+		border-top-style: solid;
+		border-top-width: 1px;
+		border-bottom-right-radius: 0px;
+		box-sizing: border-box;
+	}
+
+	h3 {
+		font-family: "Guardian-EgypTT",serif;
+		font-size: 25px;
+		margin: 5px 10px 12px 10px;
+		line-height: 28px;
+	}
+
+	.bowl-container {
+		height: 30%;
+	}
+
+	.bowl-pic-text {
+		position: absolute;
+		top: 0px;
+		left: 20px;
+	}
+
+	h5 {
+		font-size: 20px;
+		margin: 10px 0px 10px 0px;
+	}
+
+	#bowl-pic {
+		display: block;
+		flex-direction: row;
+		width: 100%;
+		height: 250px;
+		margin: 0px;
+		margin: 15px 0px 10px 0px;
+	}
+
+	.nav-bar, li, #checks, .pic-text-2, article, h4, .check-p, check-symbol, #girl-pic {
+		display: none;
+	}
+
+}
+
+/* mobile CSS - very small phones */
 @media only screen and (max-width: 300px) {
 
 	input {
@@ -490,6 +654,11 @@ h4 {
 	h3 {
 		font-size: 20px;
 		margin: 5px 5px 12px 5px;
+	}
+
+	#pic-section-1 {
+		flex-direction: column-reverse;
+		height: 90%;
 	}
 
 	h5 {
