--- a/fp/fp.css
+++ b/fp/fp.css
@@ -7,7 +7,7 @@ body, html {
 
 .bg {
 	background-image: url('https://cdn.aarp.net/content/dam/aarp/money/investing/2020/01/1140-bull-and-bear-illustration-with-stock-chart.jpg');	
-  	height: 100%; 
+  	height: 75%; 
   	background-position: center;
   	background-repeat: no-repeat;
   	background-size: cover;
@@ -22,4 +22,26 @@ body, html {
 	.bg {
 		height: 50%;
 	}
+
+	/* hide initial value and profit and loss on mobile so not too crowded */
+	table thead tr :nth-child(5) {
+		display: none; 
+	}
+
+	table thead tr :nth-child(6) {
+		display: none; 
+	}
+
+	table tbody tr :nth-child(5) {
+		display: none; 
+	}
+
+	table tbody tr :nth-child(6) {
+		display: none; 
+	}
+
+	table tbody tr td .form-control {
+		width: 40px;
+	}
+
 }
